# unloader_project

./: .gitignore  __main__.py  a.py  main.py  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
UI/: main.py
UI/controller/: main_controller.py
UI/view/: main_window.py
adapters/config/: __init__.py  app_config_adapter.py  app_config_handler.py
adapters/image_analysis/: __init__.py  contour_validator.py
adapters/image_grab/: __init__.py  camera_grabber.py  file_grabber.py  picamera_grabber.py
adapters/image_process/: __init__.py
adapters/image_processor/: image_pre_process_service.py
adapters/image_uploader/: __init__.py  default_uploader.py  minpc_uploader.py
adapters/remote_capture/: __init__.py  direct_connector.py  get_file.py  master.py  test.py  url_requestor.py
app/: factory.py  runner.py  sequence.py
app/debug_roi_setter/: roi_setter.py
app/factories/: __init__.py  grabber_factory.py  inspection_factory.py
config/: app_config.json  roi_settings.yaml
core/: app_state.py
core/analysis/: distance_validator.py  fullness_validator.py
core/image_grab/: __init__.py  camera_grabber.py  (+2 more)
exceptions/: exception.py
model/: contour.py
signal_slave/: __init__.py  master.py  master_new.py
test/: camera_sequence.py  test_sequence.py  viewer.py
tests/: test_sequence.py
ui/: __init__.py  debug_view.py  demo.py  main.py  viewer_controller.py  viewer_model.py  viewer_view.py
ui_temp/: requirements.txt
utils/: app_config_handler.py  image_renderer.py  logger.py  pretty_print.py  pyside_viewer.py  visual_debugger.py
(+79 files in other folders)
