[project]
name = "unloader-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyside6>=6.10.1",
    "shiboken6>=6.10.1",
    "ultralytics>=8.3.230",
]
